[gd_scene load_steps=25 format=3 uid="uid://cabgrr2bvykhs"]

[ext_resource type="Script" path="res://scenes/spider/spider_bot/start_ik.gd" id="1_n6l5c"]
[ext_resource type="PackedScene" uid="uid://b1n5rqw53onuo" path="res://scenes/spider/spider_bot/spider_bot_model.gltf" id="1_vovvw"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/spider_bot.gd" id="2_kfpvc"]
[ext_resource type="AudioStream" uid="uid://cjaaeqg2od4xp" path="res://assets/735590__jacobsteel__circuit-bent-speak-and-math-bent-reclocked-behringer-delay.ogg" id="3_c7foj"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/step_ray.gd" id="4_8a6ki"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/ik_target.gd" id="4_p25cf"]
[ext_resource type="AudioStream" uid="uid://daxfgahkb7brl" path="res://assets/hi-hat-231042.mp3" id="4_viuwo"]
[ext_resource type="AudioStream" uid="uid://oepl8swo2oth" path="res://assets/545163__xenatra__ctk811-circuitbend-1.wav" id="5_tmqmq"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/StepTargetContainer.gd" id="5_yguvh"]
[ext_resource type="AudioStream" uid="uid://duharmb7l0myq" path="res://assets/545164__xenatra__ctk811-circuitbend-9.wav" id="6_68dyp"]
[ext_resource type="AudioStream" uid="uid://r2k33j23nw0s" path="res://assets/545165__xenatra__ctk811-circuitbend-8.wav" id="7_62tvx"]
[ext_resource type="Texture2D" uid="uid://c3omik21jvkx7" path="res://assets/Bear_5.webp" id="9_vkk0n"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/state_machine.gd" id="13_gvsl0"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/idle.gd" id="14_8blqx"]
[ext_resource type="Script" path="res://scenes/spider/spider_bot/roaming.gd" id="15_kgm07"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5x8tb"]
playback_mode = 1
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("4_viuwo")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gjtji"]
streams_count = 3
stream_0/stream = ExtResource("5_tmqmq")
stream_1/stream = ExtResource("6_68dyp")
stream_2/stream = ExtResource("7_62tvx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dwxtc"]
albedo_color = Color(0.396078, 0.396078, 0.396078, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dg2m1"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 5.14

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ahgjw"]
albedo_color = Color(0.52549, 0.52549, 0.52549, 1)

[sub_resource type="Animation" id="Animation_vch82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../SpotLight3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.11692, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3eu6h"]
resource_name = "sweep"
length = 4.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../SpotLight3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.523599, 0), Vector3(0, -0.523599, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oht1n"]
_data = {
"RESET": SubResource("Animation_vch82"),
"sweep": SubResource("Animation_3eu6h")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tmiaa"]
height = 100.0
radius = 5.0

[node name="SpiderBot" node_paths=PackedStringArray("model", "spotlight", "nav_agent") instance=ExtResource("1_vovvw")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("2_kfpvc")
debug = true
model = NodePath("Armature")
spotlight = NodePath("Armature/SpotLight3D")
nav_agent = NodePath("NavigationAgent3D")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="0"]
path_height_offset = -2.5
debug_enabled = true
debug_use_custom = true
debug_path_custom_point_size = 50.0

[node name="Freaky" type="AudioStreamPlayer3D" parent="." index="1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
stream = ExtResource("3_c7foj")
autoplay = true
doppler_tracking = 2
parameters/looping = true

[node name="Step" type="AudioStreamPlayer3D" parent="." index="2"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
stream = SubResource("AudioStreamRandomizer_5x8tb")
volume_db = -5.0
max_db = -5.0
max_polyphony = 4
bus = &"SFX"
doppler_tracking = 2

[node name="Alert" type="AudioStreamPlayer3D" parent="." index="3"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
stream = SubResource("AudioStreamRandomizer_gjtji")

[node name="Armature" parent="." index="4"]
transform = Transform3D(3.06884, 0, 0, 0, 3.06884, 0, 0, 0, 3.06884, 0.115582, 0, 0)

[node name="Body_2" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(0.325856, 0, 0, 0, 0.325856, 0, 0, 0, 0.325856, 0, 0, 0)

[node name="Body_2" parent="Armature/Skeleton3D/Body_2" index="0"]
material_override = SubResource("StandardMaterial3D_dwxtc")

[node name="Cylinder" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(0.325856, 0, 0, 0, 0, -0.325856, 0, 0.325856, 0, 0, 0.101015, -0.348666)

[node name="Cylinder" parent="Armature/Skeleton3D/Cylinder" index="0"]
material_override = SubResource("StandardMaterial3D_dg2m1")

[node name="Leg" parent="Armature/Skeleton3D" index="2"]
material_override = SubResource("StandardMaterial3D_ahgjw")

[node name="FrontLeftIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="3"]
process_priority = 1
root_bone = &"leg1FrontLeft"
tip_bone = &"Foot IKFrontLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontLeftIKTarget")
script = ExtResource("1_n6l5c")

[node name="FrontRightIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="4"]
process_priority = 1
root_bone = &"leg1FrontRight"
tip_bone = &"Foot IKFrontRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontRightIKTarget")
script = ExtResource("1_n6l5c")

[node name="BackLeftIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="5"]
process_priority = 1
root_bone = &"leg1BackLeft"
tip_bone = &"Foot IKBackLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackLeftIKTarget")
script = ExtResource("1_n6l5c")

[node name="BackRightIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="6"]
process_priority = 1
root_bone = &"leg1BackRight"
tip_bone = &"Foot IKBackRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackRightIKTarget")
script = ExtResource("1_n6l5c")

[node name="StepTargetContainer" type="Node3D" parent="Armature" index="1"]
transform = Transform3D(0.325856, 0, 0, 0, 0.325856, 0, 0, 0, 0.325856, -0.0376631, 0, 0)
script = ExtResource("5_yguvh")

[node name="FrontLeftRay" type="RayCast3D" parent="Armature/StepTargetContainer" index="0" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, 4.63889e-10, -0.0868241, 0.992404, -0.0871557, -0.00759612, 0.0868241, 0.996195, -3.13864, 3.06899, -3.09518)
target_position = Vector3(0, -10, 0)
script = ExtResource("4_8a6ki")
step_target = NodePath("FrontLeftStepTarget")

[node name="FrontLeftStepTarget" type="Marker3D" parent="Armature/StepTargetContainer/FrontLeftRay" index="0"]
transform = Transform3D(0.996195, -0.0868241, -0.00759612, 0.0871557, 0.992404, 0.0868241, 9.31322e-10, -0.0871557, 0.996195, 0, -5.21685, 0)

[node name="FrontRightRay" type="RayCast3D" parent="Armature/StepTargetContainer" index="1" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, -4.63889e-10, 0.0868241, 0.992404, -0.0871557, 0.00759612, 0.0868241, 0.996195, 3.13673, 3.06899, -3.09518)
target_position = Vector3(0, -10, 0)
script = ExtResource("4_8a6ki")
step_target = NodePath("FrontRightStepTarget")

[node name="FrontRightStepTarget" type="Marker3D" parent="Armature/StepTargetContainer/FrontRightRay" index="0"]
transform = Transform3D(0.996195, 0.0868241, 0.00759612, -0.0871557, 0.992404, 0.0868241, -9.31322e-10, -0.0871557, 0.996195, -2.38419e-07, -5.21685, 0)

[node name="BackLeftRay" type="RayCast3D" parent="Armature/StepTargetContainer" index="2" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, -4.63889e-10, -0.0868241, 0.992404, 0.0871557, 0.00759612, -0.0868241, 0.996195, -3.13864, 3.06899, 3.13846)
target_position = Vector3(0, -10, 0)
script = ExtResource("4_8a6ki")
step_target = NodePath("BackLeftStepTarget")

[node name="BackLeftStepTarget" type="Marker3D" parent="Armature/StepTargetContainer/BackLeftRay" index="0"]
transform = Transform3D(0.996195, -0.0868241, 0.00759612, 0.0871557, 0.992404, -0.0868241, -9.31322e-10, 0.0871557, 0.996195, 0, -5.21685, -2.38419e-07)

[node name="BackRightRay" type="RayCast3D" parent="Armature/StepTargetContainer" index="3" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, 4.63889e-10, 0.0868241, 0.992404, 0.0871557, -0.00759612, -0.0868241, 0.996195, 3.13673, 3.06899, 3.13846)
target_position = Vector3(0, -10, 0)
script = ExtResource("4_8a6ki")
step_target = NodePath("BackRightStepTarget")

[node name="BackRightStepTarget" type="Marker3D" parent="Armature/StepTargetContainer/BackRightRay" index="0"]
transform = Transform3D(0.996195, 0.0868241, -0.00759612, -0.0871557, 0.992404, -0.0868241, 9.31322e-10, 0.0871557, 0.996195, -2.38419e-07, -5.21685, -2.38419e-07)

[node name="SpotLight3D" type="SpotLight3D" parent="Armature" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.993173, 0.116654, 0, -0.116654, 0.993173, 0.000282519, 0.273558, -0.378309)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true
spot_range = 500.0
spot_angle = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Armature/SpotLight3D" index="0"]
root_node = NodePath("../../Skeleton3D/Body_2")
libraries = {
"": SubResource("AnimationLibrary_oht1n")
}

[node name="Long Distance" type="Area3D" parent="Armature/SpotLight3D" index="1"]
collision_layer = 0

[node name="Long Distance" type="CollisionShape3D" parent="Armature/SpotLight3D/Long Distance" index="0"]
transform = Transform3D(0.999762, -0.0218149, 9.53557e-10, 0, -4.37114e-08, -1, 0.0218149, 0.999762, -4.3701e-08, 1.09074, 0, -49.9881)
shape = SubResource("CylinderShape3D_tmiaa")

[node name="OmniLight3D" type="OmniLight3D" parent="Armature" index="3"]
transform = Transform3D(0.162928, 0, 0, 0, 0.162928, 0, 0, 0, 0.162928, 0, 0.256634, -0.460646)
light_color = Color(1, 0, 0, 1)
shadow_enabled = true
omni_range = 3.0
omni_attenuation = 2.0

[node name="Sprite3D" type="Sprite3D" parent="Armature" index="4"]
transform = Transform3D(0.325856, 0, 0, 0, 0.325856, 0, 0, 0, 0.325856, -0.0376631, 0.390232, -0.448495)
texture = ExtResource("9_vkk0n")

[node name="FrontLeftIKTarget" type="Marker3D" parent="." index="5" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.97566, -1.49437, -7.0634)
top_level = true
script = ExtResource("4_p25cf")
step_target = NodePath("../Armature/StepTargetContainer/FrontLeftRay/FrontLeftStepTarget")
adjacent_target = NodePath("../FrontRightIKTarget")
opposite_target = NodePath("../BackRightIKTarget")

[node name="FrontRightIKTarget" type="Marker3D" parent="." index="6" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.55325, -2.10824, -7.7606)
top_level = true
script = ExtResource("4_p25cf")
step_target = NodePath("../Armature/StepTargetContainer/FrontRightRay/FrontRightStepTarget")
adjacent_target = NodePath("../FrontLeftIKTarget")
opposite_target = NodePath("../BackLeftIKTarget")

[node name="BackLeftIKTarget" type="Marker3D" parent="." index="7" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.59332, -2.10824, 3.59141)
top_level = true
script = ExtResource("4_p25cf")
step_target = NodePath("../Armature/StepTargetContainer/BackLeftRay/BackLeftStepTarget")
adjacent_target = NodePath("../BackRightIKTarget")
opposite_target = NodePath("../FrontRightIKTarget")

[node name="BackRightIKTarget" type="Marker3D" parent="." index="8" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.59141, -2.10824, 3.59141)
top_level = true
script = ExtResource("4_p25cf")
step_target = NodePath("../Armature/StepTargetContainer/BackRightRay/BackRightStepTarget")
adjacent_target = NodePath("../BackLeftIKTarget")
opposite_target = NodePath("../FrontLeftIKTarget")

[node name="Spider State Machine" type="Node" parent="." index="9" node_paths=PackedStringArray("initial_state")]
script = ExtResource("13_gvsl0")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Spider State Machine" index="0"]
script = ExtResource("14_8blqx")
idle_time = 8.0
idle_time_offset = 2.0

[node name="Roaming" type="Node" parent="Spider State Machine" index="1"]
script = ExtResource("15_kgm07")

[connection signal="body_entered" from="Armature/SpotLight3D/Long Distance" to="." method="_on_detect_player_body_entered"]
